2008-02-08  Wakaba  <wakaba@suika.fam.cx>

	* MediaQueryParser.pm, MediaQuerySerializer.pm: New Perl modules.

2008-02-03  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('display', 'list-style-type',
	'caption-side'): CSS 2.0 values added.
	('font-size-adjust', 'font-stretch', 'marker-offset'): Implemented. 
	($length_percentage_keyword_parser): Now this is in a variable.
	($length_keyword_parser): Now this is in a variable, too.
	('font'): Reset 'font-size-adjust' and 'font-stretch' as
	defined by CSS2.
	('marks', 'size', 'page'): Implemented.

2008-02-02  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer, serialize parameters): Removed (now
	it is part of manakai Message::DOM::CSSStyleDeclaration).
	('overflow' key): Removed (since it is a shorthand property).

2008-02-02  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('font', 'cursor'): Serializer are 
	merged with $default_serializer.

2008-02-02  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer): New 'RECT' type supported.
	('clip'): Implemented.

2008-01-30  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer): New 'ADDCOUNTER'
	and 'SETCOUNTER' types supported.
	('content'): 'counter()' and 'counters()' are supported iff
	the property 'counter-reset' is supported.
	('counter-reset', 'counter-increment'): Implemented.

2008-01-28  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer): New 'CONTENT' type supported.
	('content'): Implemented.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer): 'QUOTES' type supported.
	('quotes'): Implemented.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($one_keyword_parser): More accurate error location
	reporting.
	('overflow-x', 'overflow-y'): Implemented.
	('overflow'): Reimplemented as a shorthand.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('opacity' parse): Support for '+'.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>
