@@ -1,5 +1,11 @@
 2008-02-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-2.dat: New test data.
+
+	* CSS-Parser-1.t: |css-2.dat| added.  Support for |@media|.
+
+2008-02-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* CSS-MediaQuery.t, mq-1.dat: New files.
 
 2008-02-03  Wakaba  <wakaba@suika.fam.cx>
