@@ -1,5 +1,9 @@
 2008-02-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: Support for '@nedia' at-rule.
+
+2008-02-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* MediaQueryParser.pm, MediaQuerySerializer.pm: New Perl modules.
 
 2008-02-03  Wakaba  <wakaba@suika.fam.cx>
